--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap'); */
 
 body{
     background-color: #F4F9FD;
+    /* width: 100%;
+    height: 100%; */
     
 }
 *{
